<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <TextView
            style="@style/StyleBoxBase"
            android:text="@string/local_title" />

        <Button
            style="@style/StyleBox1"
            android:text="@string/button_spotify"/>

        <Button
            style="@style/StyleBox2"
            android:text="@string/button_scores"/>

        <Button
            style="@style/StyleBox1"
            android:text="@string/button_library"/>

        <Button
            style="@style/StyleBox1"
            android:text="@string/button_build"/>

        <Button
            style="@style/StyleBox1"
            android:text="@string/button_reader"/>

        <Button
            style="@style/StyleBoxBase"
            android:text="@string/button_myapp"/>

    </LinearLayout>
</RelativeLayout>
